--- a/RestAPI/RestAPI/requirements.txt
+++ b/RestAPI/RestAPI/requirements.txt
@@ -48,9 +48,11 @@ pyzmq==17.0.0
 qtconsole==4.3.1
 requests==2.18.4
 requests-oauthlib==0.8.0
+scikit-learn==0.19.1
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
+sklearn==0.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0
