--- a/RestAPI/RestAPI/requirements.txt
+++ b/RestAPI/RestAPI/requirements.txt
@@ -6,8 +6,11 @@ decorator==4.2.1
 defusedxml==0.5.0
 Django==1.11.6
 django-allauth==0.34.0
+django-background-tasks==1.1.13
+django-compat==1.0.15
 django-extensions==2.0.0
 django-filter==1.1.0
+django-pandas==0.5.1
 django-rest-auth==0.9.2
 djangorestframework==3.7.1
 entrypoints==0.2.3
@@ -49,6 +52,7 @@ qtconsole==4.3.1
 requests==2.18.4
 requests-oauthlib==0.8.0
 scikit-learn==0.19.1
+scipy==1.0.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
