--- a/RestAPI/RestAPI/requirements.txt
+++ b/RestAPI/RestAPI/requirements.txt
@@ -14,6 +14,8 @@ django-pandas==0.5.1
 django-rest-auth==0.9.2
 djangorestframework==3.7.1
 entrypoints==0.2.3
+geopy==1.12.0
+googlemaps==2.5.1
 html5lib==1.0.1
 idna==2.6
 ipykernel==4.8.2
@@ -27,6 +29,7 @@ jupyter==1.0.0
 jupyter-client==5.2.2
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+lxml==4.2.0
 MarkupSafe==1.0
 mistune==0.8.3
 mysqlclient==1.3.12
